Fix code highlighter contrast error

--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -45,7 +45,7 @@
       number: hsl(315 90% 35%),
       constant: rgb(63, 107, 202),
       class-name: hsl(0 0% 7%),
-      regex: hsl(1 48% 59%)
+      regex: hsl(1 66% 47%)
     )
   ),
   $dark-colors: dark.$colors,
